# krita-cli

./: .gitignore  .pre-commit-config.yaml  README.md  SECRETS.md  fix_cli_tests.py  pyproject.toml  renovate.json  server.py
.codex-plugin/: plugin.json
.codex-plugin/agents/: pelican-bike-illustrator.md
.codex-plugin/skills/pelican-bike-drawing/: SKILL.md
.codex-plugin/skills/pelican-bike-drawing/references/: pelican-anatomy.md
.github/skills/: krita-mcp.md
.github/workflows/: ci.yml
.hypothesis/constants/: 038eac7d775fbf2d  0535898dc63a0038  0f82110ae637871c  102b4a42a4d670fc  1d1f227a4b31dba7  1d89a9186b609822  2040586bb4a4f3ac  237bbb02febb70d9  27b1fdef58496ffb  32d6f0a077eab759  39206cdbe712656c  4d82690eb4db323e  4ef0c8e1aac57e39  50721c9212f5855f  76d5b547d55ffa0e  7b959050f9f5996f  8685ec3c9c2e49af  9103959f406b2f0f  94cd7032a51a4300  a4c602f3a10caf4b  a647dfafbc1b35cb  a8e6f0e877f08c86  bd882d7ef4d92ed3  d2b2bab5d2a8c509  d4ff80c0ed8e6272  d8c029f3bbd856c0  da348fa8f320662e  df06b2b5a8781dc2  dfa6939c6211c19d  e187c38127a10810  ef41a465068fc438  f0624daa8f29d761  f5d0aa654f46e329
.hypothesis/tmp/: tmp0dqvs0fl  tmp0sbt1myi  tmp2gyz95dw  tmp2hwj86us  tmp35xe0gc4  tmp3m3n_8ji  tmp45zlxib4  tmp4u4t6ckh  tmp5oy9vlw7  tmp6ncsxq8z  tmp6y6coyvi  tmp915dz500  tmp9a693g6p  tmpbkaswgyy  tmpbt7ec897  tmpddypu84u  tmpdpsqjb2f  tmph_gi0az0  tmphssf_uct  tmpjkdzt0u6  tmpkidgp3e1  tmpmk17qv6p  tmpn3tst3kp  tmpn4frie8t  tmpn6k5ystu  tmpowgqjjai  tmppha7a1se  tmpps6b9g9r  tmpsi_sj7rb  tmpsnb03v_c  tmptat13303  tmpy8493ebl
benchmarks/: test_rendering.py
conda-recipe/: meta.yaml
conductor/: product-guidelines.md  product.md  tech-stack.md  tracks.md  workflow.md
conductor/archive/cli_command_grouping_20260406/: metadata.json  spec.md
conductor/archive/command_history_replay_20260405/: index.md  metadata.json  plan.md  spec.md
conductor/archive/mcp_tool_discovery_20260406/: plan.md  spec.md
conductor/archive/protocol_versioning_v2_20260406/: index.md
conductor/archive/rollback_mechanisms_20260405/: index.md  metadata.json  plan.md  spec.md
conductor/archive/security_limits_validation_20260406/: index.md  spec.md
conductor/archive/selection_advanced_features_20260406/: spec.md
conductor/archive/selection_clipping_integration_20260406/: plan.md  spec.md
conductor/archive/selection_persistence_20260406/: index.md
conductor/archive/selection_quality_coverage_20260406/: spec.md
conductor/archive/selection_transforms_modifiers_20260406/: plan.md  spec.md
conductor/code_styleguides/: python.md
conductor/tracks/cli_command_grouping_20260406/: index.md  plan.md
conductor/tracks/e2e_test_infrastructure_20260406/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/implement_batch_operations_endpoint_20260405/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/mcp_tool_discovery_20260406/: index.md  metadata.json  plan.md
conductor/tracks/performance_benchmarking_ci_20260406/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/protocol_versioning_v2_20260406/: metadata.json  plan.md  spec.md
conductor/tracks/security_limits_validation_20260406/: metadata.json  plan.md
conductor/tracks/selection_advanced_features_20260406/: index.md  metadata.json  plan.md
conductor/tracks/selection_clipping_integration_20260406/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/selection_persistence_20260406/: metadata.json  plan.md  spec.md
conductor/tracks/selection_quality_coverage_20260406/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/selection_tools_20260406/: index.md  metadata.json  plan.md  spec.md
conductor/tracks/selection_transforms_modifiers_20260406/: index.md  metadata.json  plan.md
conductor/tracks/windows_testing_20260406/: index.md  metadata.json  plan.md  spec.md
krita-plugin/kritamcp/: __init__.py  history_store.py
notes/: pelican-bike-learning-log.md
src/krita_cli/: __init__.py  _shared.py  app.py  cli.py  config_cli.py  config_cmd.py  history.py
src/krita_cli/commands/: batch.py  call.py  history.py  history_cmd.py  introspect.py  replay.py  rollback.py  selection.py  stroke.py
src/krita_client/: __init__.py  client.py  config.py  models.py
src/krita_mcp/: server.py
tests/: conftest.py  test_phase_11.py
tests/e2e/: conftest.py  krita_driver.py  test_e2e.py  test_e2e_mock.py  test_krita_live.py
tests/integration/: test_api_capabilities.py  test_batch_cli.py  test_batch_client.py  test_cli.py  test_cli_coverage.py  test_cli_error_paths.py  test_cli_full.py  test_cli_success.py  test_config_cli.py  test_history_cli.py  test_history_endpoint.py  test_introspect_cli.py  test_mcp_error_coverage.py  test_mcp_error_result.py  test_mcp_remaining_tools.py  test_mcp_selection_tools.py  test_mcp_server.py  test_mcp_success.py  test_replay_cli.py  test_rollback.py  test_selection_advanced.py  test_selection_cli_coverage.py  test_selection_client.py  test_selection_persistence.py
tests/property/: test_input_sanitization.py
tests/unit/: test_batch_models.py  test_client.py  test_client_coverage.py  test_error_codes.py  test_history_store.py  test_mcp_batch.py  test_models.py  test_payload_validator.py  test_replay_cmd.py  test_rollback_client.py  test_rollback_models.py  test_schema.py  test_security_config.py  test_selection_advanced_models.py  test_selection_models.py  test_selection_persistence_models.py  test_shared_coverage.py  test_snapshot_store.py  test_type_safety_coverage.py
